--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<meta property="og:title" content="現在オンライン中" /><meta property="og:image" content="https://api.fbutube.com/uploads/2025/04/play_button/68106ecfbeb9e-fbutube-tterra.png" /><meta name="twitter:card" content="summary_large_image" /><script type="text/javascript">
+<meta property="og:title" content="2:32:02 現在オンライン中" /><meta property="og:image" content="https://api.fbutube.com/uploads/2025/04/play_button/68106ecfbeb9e-fbutube-tterra.png" /><meta name="twitter:card" content="summary_large_image" /><script type="text/javascript">
     fetch('/count.php',
     {
         method: "post",
